2006-01-29  Harish Krishnaswamy  <kharish@novell.com>

	* main.c: (show_development_warning):
	 s/don't/do not/ string change. Fixes #325276.

2006-01-27  Andre Klapper <a9016009@gmx.de>
	* apps_evolution_shell.schemas.in.in: changed tow strings to add
	missing punctuation and clarification for translators.
	Fixes bug 306117.

2006-01-26  Andre Klapper <a9016009@gmx.de>
	* e-shell-window-commands.c: adding missing comma in the
	contributors list.

2006-01-23  Joe Marcus Clarke <marcus@freebsd.org>

	* e-user-creatable-items-handler.c: adding a check to make sure 
	the shortcut key is not the NUL byte. Fixes bug 327468.

2006-01-21  Andre Klapper <a9016009@gmx.de>

	* e-shell-settings-dialog.c: changed string "Settings" to 
	"Preferneces" to keep consistency. Fixes bug 327933.

2006-01-19  Kyle Ambroff  <kambroff@csus.edu>

	* shell.error.xml: Default to [Cancel] instead of [Forget] in the
	when selecting "Forget Passwords" from the menu. (#325871)

2006-01-06  Andre Klapper <a9016009@gmx.de>
	* shell/e-shell-window.c: fixing two missing whitespaces.
	Fixes bug 325568.

2006-01-02  Harish Krishnaswamy  <kharish@novell.com>

	* e-shell-nm-glib.c: (e_shell_nm_glib_initialise):
	Remove suspicious and possibly redundant 
	register/unregister calls. Fixes #325364 (critical
	warning crasher).

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* shell.error.xml: removed a typo. yeah.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* shell.error.xml: removed a duplicated word. Fixes bug 325119.

2005-12-22  Tor Lillqvist  <tml@novell.com>

	* Evolution-Shell.idl: Guard against generating code when running
	this through the IDL compiler elsewhere than here in evo/shell,
	the same way as in Evolution-Component.idl. Otherwise we get
	duplicated IDL-generated functions in the libeshell and
	libevolution-mail DLLs (shared libraries), which causes much pain
	on Win32 at least, and is useless and potentially risky on all
	platforms.

2005-09-24  Andre Klapper  <a9016009@gmx.de>:
	